--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
          }
       </script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script type="text/javascript">(function(){var ticker=document.createElement('script');ticker.type='text/javascript';ticker.async=true;ticker.src='http://twitcker.com/ticker/GenasysTech.js?container=own-container&own-container=twitter-feed';(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(ticker);})();</script>
+      <script type="text/javascript">(function(){var ticker=document.createElement('script');ticker.type='text/javascript';ticker.async=true;ticker.src='https://twitcker.com/ticker/GenasysTech.js?container=own-container&own-container=twitter-feed';(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(ticker);})();</script>
       <script src="scripts/bootstrap.min.js"></script>
       <script src="scripts/custom.js"></script>
       <script type="text/javascript" src="scripts/iconate.min.js"></script>
