--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="#"><img src="elements/general_build/genasys_logo_white.png" height="65" width="auto"> </a>
+               <a class="navbar-brand" href="#"><img src="elements/general_build/genasys_logo_white.png" height="82" width="auto"> </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -325,17 +325,21 @@
 					<div class="events-wrapper">
 						<div class="events">
 							<ol>
-								<li><a href="#0" data-date="16/01/2014" class="selected">16 Jan</a></li>
-								<li><a href="#0" data-date="28/02/2014">28 Feb</a></li>
-								<li><a href="#0" data-date="20/04/2014">20 Mar</a></li>
-								<li><a href="#0" data-date="20/05/2014">20 May</a></li>
-								<li><a href="#0" data-date="09/07/2014">09 Jul</a></li>
-								<li><a href="#0" data-date="30/08/2014">30 Aug</a></li>
-								<li><a href="#0" data-date="15/09/2014">15 Sep</a></li>
-								<li><a href="#0" data-date="01/11/2014">01 Nov</a></li>
-								<li><a href="#0" data-date="10/12/2014">10 Dec</a></li>
-								<li><a href="#0" data-date="19/01/2015">29 Jan</a></li>
-								<li><a href="#0" data-date="03/03/2015">3 Mar</a></li>
+								<li><a href="#0" data-date="01/01/1997" class="selected">1997</a></li>
+								<li><a href="#0" data-date="01/01/2001">2001</a></li>
+								<li><a href="#0" data-date="01/01/2002">2002</a></li>
+								<li><a href="#0" data-date="01/01/2003">2003</a></li>
+								<li><a href="#0" data-date="01/01/2004">2004</a></li>
+								<li><a href="#0" data-date="01/01/2005">2005</a></li>
+								<li><a href="#0" data-date="01/01/2006">2006</a></li>
+								<li><a href="#0" data-date="01/01/2008">2008</a></li>
+								<li><a href="#0" data-date="01/01/2009">2009</a></li>
+								<li><a href="#0" data-date="01/01/2011">2011</a></li>
+								<li><a href="#0" data-date="01/01/2012">2012</a></li>
+								<li><a href="#0" data-date="01/01/2013">2013</a></li>
+								<li><a href="#0" data-date="01/01/2014">2014</a></li>
+								<li><a href="#0" data-date="01/01/2015">2015</a></li>
+								<li><a href="#0" data-date="01/01/2016">2016</a></li>
 							</ol>
 
 							<span class="filling-line" aria-hidden="true"></span>
@@ -349,82 +353,69 @@
 				</div> <!-- .timeline -->
 				<div class="events-content">
 					<ol>
-						<li class="selected" data-date="16/01/2014">
-							<h2>Horizontal Timeline</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
+						<li class="selected" data-date="01/01/1997">
+							<h2>An idea is Born</h2><hr>
+							<p>	Original concept designed in a garage office. </p>
 						</li>
 
-						<li data-date="28/02/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
+						<li data-date="01/01/2001">
+							<h2>Humble Beginnings</h2><hr>
+							<p>	First Product, Customer of One goes live. </p>
+						</li>
+						<li data-date="01/01/2002">
+							<h2>In the Market</h2><hr>
+							<p>	Genasys goes live with its first insurer. </p>
+						</li>
+						<li data-date="01/01/2003">
+							<h2>Putting Down Roots</h2><hr>
+							<p>	Genasys establishes its first office in TechnoPark Stellenbosch. </p>
+						</li>
+						<li data-date="01/01/2004">
+							<h2>Major Growth</h2><hr>
+							<p>	First nationwide rollout. </p>
+						</li>
+						<li data-date="01/01/2005">
+							<h2>Across the Seas</h2><hr>
+							<p>	Genasys secures its first UK client. </p>
+						</li>
+						<li data-date="01/01/2006">
+							<h2>Reinvention and Upscaling</h2><hr>
+							<p>	Genasys launches its Johannesburg Office and Customer of One relaunched as SKi. </p>
+						</li>
+						<li data-date="01/01/2008">
+							<h2>Worldwide Renown</h2><hr>
+							<p>	First multinational Broker Implementation. </p>
+						</li>
+						<li data-date="01/01/2009">
+							<h2>A New Creation</h2>
+							<p>	Nationwide rollout of client. </p>
+						</li>
+						<li data-date="01/01/2011">
+							<h2>Home to Many</h2><hr>
+							<p>	Genasys assist another national broker to migrate 5 systems onto SK and Genasys grows to 40 staff. </p>
+						</li>
+						<li data-date="01/01/2012">
+							<h2>Upgrading</h2><hr>
+							<p>	Genasys CPT moves to new modern offices in Somerset and grows to 50 employees. </p>
+						</li>
+						<li data-date="01/01/2013">
+							<h2>The Growth Never Stops</h2><hr>
+							<p>	Genasys grows to 60 full time employees. </p>
+						</li>
+						<li data-date="01/01/2014">
+							<h2>Covering the Continent</h2><hr>
+							<p>	SKi rolls out to several African territories. </p>
+						</li>
+						<li data-date="01/01/2015">
+							<h2>Continued Development</h2><hr>
+							<p>	Genasys implements its first Blue Chip Insurer, launches the UK Office and Web API. </p>
+						</li>
+						<li data-date="01/01/2016">
+							<h2>Modern and Dynamic</h2><hr>
+							<p>	Genasys grows to more than 80 employees and deploys to Azure. </p>
 						</li>
 
-						<li data-date="20/04/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
 
-						<li data-date="20/05/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="09/07/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="30/08/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="15/09/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="01/11/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="10/12/2014">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="19/01/2015">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
-
-						<li data-date="03/03/2015">
-							<h2>Event title here</h2>
-							<p>	
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
-							</p>
-						</li>
 					</ol>
 				</div> <!-- .events-content -->
 		</section>
