--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   <p class="stats-subheading">Amount of employees</p>
                </div>
                <div class="col-md-3 stats-box-outer">
-                  <div class="stats-box-inner cities-box" style="padding-top: 35px;">
+                  <div class="stats-box-inner cities-box" style="padding-top: 25px;">
                      <p class="box2-sm city-box1">Cape Town</p>
                      <p class="box2-md city-box2">Johannesburg</p>
                      <p class="box2-sm city-box3">London</p>
@@ -392,11 +392,11 @@
 						</li>
 						<li data-date="01/01/2011">
 							<h2>Home to Many</h2><hr>
-							<p>	Genasys assist another national broker to migrate 5 systems onto SK and Genasys grows to 40 staff. </p>
+							<p>	Genasys assists another national broker to migrate 5 systems onto SKi and Genasys grows to 40 staff. </p>
 						</li>
 						<li data-date="01/01/2012">
 							<h2>Upgrading</h2><hr>
-							<p>	Genasys CPT moves to new modern offices in Somerset and grows to 50 employees. </p>
+							<p>	Genasys Cape Town moves to new modern offices in Somerset West and grows to 50 employees. </p>
 						</li>
 						<li data-date="01/01/2013">
 							<h2>The Growth Never Stops</h2><hr>
@@ -453,7 +453,7 @@
             </div>
          </div>
       </section> -->
-      <div id="chart1-section" class="visible-mobile">
+      <!-- <div id="chart1-section" class="visible-mobile">
          <div class="container">
             <h1 class="lg-header" >Employee Timeline</h1>
             <div class="chart1-padding"></div>
@@ -466,7 +466,7 @@
             <div class="chart2-padding"></div>
             <canvas id="chart2sm"></canvas>
          </div>
-      </div>
+      </div> -->
       <div id="logos-section">
          <div class="container">
             <div class="row">
