Made retarded changes again

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                      <i class="fa fa-users fa-2x users-icon" aria-hidden="true"></i>
                      <p class="box1-count"><span class="count1">0</span>+</p>
                   </div>
-                  <p class="stats-subheading">Amount of employees</p>
+                  <p class="stats-subheading">Number of employees</p>
                </div>
                <div class="col-md-3 stats-box-outer">
                   <div class="stats-box-inner cities-box" style="padding-top: 25px;">
