--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
          			<div class="col-lg-4">
          				<!-- <div style="min-width: 600px;"> -->
 	                     <img src="elements/general_build/genasys-splash.png" alt="Genasys logo" class="img-responsive genasys-splash-logo">
-	                     <p class="splash-text">If you would like to engage with an established <a href="https://twitter.com/search?f=tweets&q=%23insuretechpartner" target="_blank">#insuretechpartner</a> that has the proven track record to help optimise your business with a stable and robust PAS, please contact us here</p>
+	                     <p class="splash-text">If you would like to engage with an established <a href="https://twitter.com/search?f=tweets&q=%23insurtechpartner" target="_blank">#insurtechpartner</a> that has the proven track record to help optimise your business with a stable and robust PAS, please contact us here</p>
 	                     <div class="splash-row">
 	                        <div class="col-md-4">
 	                           <input class="text-field-white" type="text" placeholder="Name" value="">
@@ -319,8 +319,12 @@
          </div>
       </div>
 
-
-      <section class="cd-horizontal-timeline">
+      <div style="padding: 10px 0px 10px 0px; background-color: #fff;">
+         <div class="container">
+            <img src="elements/general_build/timeline.jpg" height="auto" width="100%">
+         </div>
+      </div>
+      <!-- <section class="cd-horizontal-timeline">
 				<div class="timeline">
 					<div class="events-wrapper">
 						<div class="events">
@@ -343,14 +347,14 @@
 							</ol>
 
 							<span class="filling-line" aria-hidden="true"></span>
-						</div> <!-- .events -->
-					</div> <!-- .events-wrapper -->
+						</div> 
+					</div> 
 						
 					<ul class="cd-timeline-navigation">
 						<li><a href="#0" class="prev inactive">Prev</a></li>
 						<li><a href="#0" class="next">Next</a></li>
-					</ul> <!-- .cd-timeline-navigation -->
-				</div> <!-- .timeline -->
+					</ul> 
+				</div> 
 				<div class="events-content">
 					<ol>
 						<li class="selected" data-date="01/01/1997">
@@ -417,8 +421,8 @@
 
 
 					</ol>
-				</div> <!-- .events-content -->
-		</section>
+				</div> 
+		</section> -->
       <!-- <section id="Steps" class="steps-section">
          <h1 style="text-align: center;">Timeline
          </h1>
