--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
 
       <div style="padding: 10px 0px 10px 0px; background-color: #fff;">
-         <div class="container">
+         <div class="container-fluid">
             <img src="elements/general_build/timeline-red.jpg" height="auto" width="100%">
          </div>
       </div>
